# hackathon_2024_metadata_ontologies

fbbi_edam_mapper/: README.md  edam_graph.gv  filter_taxonomy.py  mapping.py  mapping_viz.py  ontology_comparison.py  proposed.gv  pyproject.toml
fbbi_edam_mapper/mapping/: FBBI-EDAM-mapping.tsv
fbbi_edam_mapper/ontologies/: edam_bioimaging_microscopy.ttl  fbbi_graph.gv  fbbi_microscopy.ttl  new_taxonomy.ttl
